# docs/swagger.yaml
@@ -1071,6 +1071,12 @@ definitions:
         type: string
       gpa:
         type: number
+      group_id:
+        description: Optional group assignment
+        type: string
+      group_name:
+        description: Group name via join
+        type: string
       id:
         type: string
       last_name:
